--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,39 @@ layout: default
 {% endif %}
 
   <h1>{{ site.title }}</h1>
+  {% if site.theme_config.show_footer == true %}
+  <head>
+    <style>
+      footer {
+        display: flex; 
+        align-items: center; 
+        justify-content: flex-start; 
+      }
+      footer a {
+      margin: 0 5px; 
+      }
+      footer a img {
+        width: 30px;
+        height: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <footer>
+      <a href="https://github.com/noonddudung2">
+        <img src="images/github-mark.png" alt="Github">
+      </a>
+      <a href="https://www.linkedin.com/in/noonddudung2/">
+        <img src="images/LI-In-Bug.png" alt="LinkedIn">
+      </a>
+      <a href="https://x.com/noonddudung2">
+        <img src="images/x.png" alt="X">
+
+      </a>
+    </footer>
+  </body>
+{% endif %}
+
   {% if site.theme_config.show_description == true %}
     <p>{{ site.description }}</p>
   {% endif %}
@@ -37,9 +70,35 @@ layout: default
 {% endif %}
 
 
-{% if site.theme_config.show_footer == true %}
-  <footer>
-    <div class="dashed"></div>
-    {% include horizontal_list.html collection=site.data.home.footer_entries %}
-  </footer>
-{% endif %}
+<!-- {% if site.theme_config.show_footer == true %}
+  <head>
+    <style>
+      footer {
+        display: flex; 
+        align-items: center; 
+        justify-content: flex-start; 
+      }
+      footer a {
+      margin: 0 5px; 
+      }
+      footer a img {
+        width: 30px;
+        height: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <footer>
+      <a href="https://github.com/noonddudung2">
+        <img src="images/github-mark.png" alt="Github">
+      </a>
+      <a href="https://www.linkedin.com/in/noonddudung2/">
+        <img src="images/LI-In-Bug.png" alt="LinkedIn">
+      </a>
+      <a href="https://x.com/noonddudung2">
+        <img src="images/x.png" alt="X">
+
+      </a>
+    </footer>
+  </body>
+{% endif %} -->
